crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v112.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 112
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 9
          - secs: 0
            nanos: 19000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 9
          - secs: 0
            nanos: 26000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 7
          - secs: 0
            nanos: 21000000
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 72000000
        - - 6
          - secs: 0
            nanos: 40000000
      stake_weighted_median:
        secs: 0
        nanos: 40000000
  - - TransferObjects
    - observations:
        - - 9
          - secs: 0
            nanos: 70000000
        - - 10
          - secs: 0
            nanos: 52000000
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 91000000
      stake_weighted_median:
        secs: 0
        nanos: 70000000
  - - Upgrade
    - observations:
        - - 2
          - secs: 0
            nanos: 177000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 8
          - secs: 0
            nanos: 337000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 5
          - secs: 0
            nanos: 262000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 70000000
        - - 10
          - secs: 0
            nanos: 224000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 224000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 492000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 322000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 280000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 200000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 128000000
  - - make_move_vec_3_elements
    - secs: 0
      nanos: 76000000
  - - mixed_commands
    - secs: 0
      nanos: 291000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
