crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v115.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
assertion_line: 2218
expression: snapshot_data
---
protocol_version: 115
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 8
          - secs: 0
            nanos: 27000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 27000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 36000000
        - - 4
          - secs: 0
            nanos: 55000000
        - - 8
          - secs: 0
            nanos: 45000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 45000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 31000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 1
          - secs: 0
            nanos: 32000000
        - - 1
          - secs: 0
            nanos: 10000000
        - - 6
          - secs: 0
            nanos: 18000000
        - - 6
          - secs: 0
            nanos: 66000000
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 9
          - secs: 0
            nanos: 598000000
      stake_weighted_median:
        secs: 0
        nanos: 981000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 7
          - secs: 0
            nanos: 178000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 57000000
        - - 10
          - secs: 0
            nanos: 77000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 142000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 410000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 330000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 96000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 305000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 180000000
  - - make_move_vec_1_elements
    - secs: 0
      nanos: 54000000
  - - mixed_commands
    - secs: 0
      nanos: 219000000
  - - upgrade_package
    - secs: 0
      nanos: 981000000
