crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v118.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 118
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 8
          - secs: 0
            nanos: 50000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 50000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 30000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 6
          - secs: 0
            nanos: 52000000
        - - 5
          - secs: 0
            nanos: 23000000
        - - 9
          - secs: 0
            nanos: 71000000
        - - 8
          - secs: 0
            nanos: 39000000
      stake_weighted_median:
        secs: 0
        nanos: 52000000
  - - Upgrade
    - observations:
        - - 2
          - secs: 0
            nanos: 0
        - - 10
          - secs: 0
            nanos: 509000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 9
          - secs: 0
            nanos: 246000000
      stake_weighted_median:
        secs: 0
        nanos: 509000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 10
          - secs: 0
            nanos: 178000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 1
          - secs: 0
            nanos: 228000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 228000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 496000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 376000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 156000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 122000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 200000000
  - - make_move_vec_1_elements
    - secs: 0
      nanos: 50000000
  - - mixed_commands
    - secs: 0
      nanos: 279000000
  - - upgrade_package
    - secs: 0
      nanos: 509000000
